package system.controller.service.database;

public enum FilterBehaviour {
    AND,
    OR
}
